made hpe slider work responsively using no fixed height
-used float: left instead of inline-div
-used width: 100%, position:relative and margin-right: -100% to make them overlap

--- a/assets/css/hpeCaseStudy.css
+++ b/assets/css/hpeCaseStudy.css
@@ -122,7 +122,7 @@ img.hpe-logo {
 }
 @media only screen and (max-width: 845px) {
   .hpe-stacked-image-container{
-    padding: 50px;
+    padding: 0 50px;
   }
 }
 .hpe-stacked-visual-img {
