--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -53,7 +53,6 @@
 }
 .slider-content {
   display: flex;
-  height: 560px;
   justify-content: space-between;
 }
 .slider-content-text {
@@ -61,13 +60,14 @@
   height: 100%;
   position: relative;
   padding-top: 20px;
+  cursor: url(/assets/images/circle-left-arrow.png), pointer;
 }
 .slider-content-text-item,
 .slider-content-image-container {
-  display: block;
-  max-height: 100%;
-  max-width: 100%;
-  position: absolute;
+  position: relative;
+  margin-right: -100%;
+  float: left;
+  width: 100%;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
 }
@@ -75,10 +75,9 @@
   height: 100%;
   width: 100%;
 }
-.slider-content-text {
-  cursor: url(/assets/images/circle-left-arrow.png), pointer;
-}
 .slider-content-images {
+  width: 70%;
+  height: 100%;
   cursor: url(/assets/images/circle-right-arrow.png), pointer;
 }
 .slider-content-text-item.active,
@@ -86,14 +85,24 @@
   opacity: 1;
   z-index: 1;
 }
-.slider-content-images {
-  width: 70%;
-  height: 100%;
-  position: relative;
-}
 @media only screen and (max-width: 845px) {
+  .slider-content {
+    flex-direction: column;
+  }
+  .slider-content-text,
+  .slider-content-images {
+    width: 100%;
+  }
   .slider {
-    padding: 50px;
-    display: none;
+    padding: 0 50px;
+  }
+  .slider-nav {
+    margin: 30px;
+  }
+  .slider .section-sub-title {
+    margin-top: 0;
+  }
+  .slider .description {
+    padding-bottom: 20px;
   }
 }
